--- a/uni/BWL_3_Ressourcenmanagement/3_Personalmanagement.tex
+++ b/uni/BWL_3_Ressourcenmanagement/3_Personalmanagement.tex
@@ -1,4 +1,4 @@
-% Created 2018-07-11 Wed 11:38
+% Created 2018-07-11 Wed 15:29
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -28,9 +28,9 @@
 \tableofcontents
 
 \section{Personalmanagement}
-\label{sec:orgf6885d8}
+\label{sec:orge0e7ce5}
 \subsection{Personal \& Wettbewerbsfähigkeit}
-\label{sec:orga9c3719}
+\label{sec:org0dc8524}
 Das Ausgangsproblem dreht sich um die optimale Ergiebigkeit menschlicher Arbeitsleistung (Gutenberg).
 
 Kategorien/Ebenen personalwirtschaftlichen Handelns:
@@ -40,9 +40,8 @@ Kategorien/Ebenen personalwirtschaftlichen Handelns:
 \item Erfolgsebene = Management der Humanressourcen und Unternehmenserfolg
 \end{itemize}
 
-\begin{enumerate}
-\item Personalwirtschaftliches Handeln
-\label{sec:orga9d796b}
+\subsubsection{Personalwirtschaftliches Handeln}
+\label{sec:org8416789}
 Geht man davon aus, dass ein bestimmter personalwirtschaftlicher Zweck prinzipiell durch verschiedene Handlungen erreicht werden kann, dass außerdem eine bestimmte Handlung prinzipiell verschiedenen personalwirtschaftlichen Zwecken dienen kann und dass schließlich Handlungen auch 'nicht-bezweckte'(nicht-intendierte) Wirkungen hervorrufen können, so werden \emph{Wahlprobleme} sichtbar, die sich mit Hilfe von elementaren \emph{Kategorien} charakterisieren lassen.
 
 Personalwirtschaftl. Probleme entstehen, wenn Unternehmer andere Personen zur Deckung des Arbeitskräftebedarfs in einer Weise in Dienst stellen dass diese bestimmte Dispositionsbefugnisse über ihre Arbeitskraft gegen eine festgelegte Vergütung direkt oder indirekt auf den Unternehmer übertragen.
@@ -65,16 +64,16 @@ Prolemkategorien:
 \end{itemize}
 \end{itemize}
 
-\item Instrumentenebende personalwirtschaftlichen Handelns
-\label{sec:org945b2e8}
+\subsubsection{Instrumentenebende personalwirtschaftlichen Handelns}
+\label{sec:org9702ca9}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=250px]{./pictures/persinstr.png}
 \caption{Instrumentenebene personalwirtschaftlichen Handelns}
 \end{figure} 
 
-\item Zielebene personalwirtschaftlichen Handelns
-\label{sec:org7d28a0b}
+\subsubsection{Zielebene personalwirtschaftlichen Handelns}
+\label{sec:org3730c41}
 \begin{itemize}
 \item Individuelle Schutzreche
 \begin{itemize}
@@ -94,33 +93,167 @@ Prolemkategorien:
 \end{itemize}
 \end{itemize}
 
-\item Erfolgsebene personalwirtschaftlichen Handelns
-\label{sec:orgd825129}
-
-\item Elementarkategorien personalwirtsch Handelns (Zusammenfassung)
-\label{sec:org182f75c}
+\subsubsection{Erfolgsebene personalwirtschaftlichen Handelns}
+\label{sec:orgdc31938}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=250px]{./pictures/perserfolg.png}
+\caption{Management der Humanressourcen \& Unternehmenserfolg}
+\end{figure} 
+\subsubsection{Elementarkategorien personalwirtsch Handelns (Zusammenfassung)}
+\label{sec:org7cff8dd}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=250px]{./pictures/perskateg.png}
 \caption{Instrumentenebene personalwirtschaftlichen Handelns}
-\end{figure}
-\end{enumerate}
+\end{figure} 
 
 \subsection{Disposition des Personalpotentials}
-\label{sec:orgab2b521}
-\begin{enumerate}
-\item Personalrekrutierung und -auswahl
-\label{sec:org0df98bb}
-Der \emph{Personalbedarf}
-\item Personalentwicklung
-\label{sec:org13220f9}
-\end{enumerate}
-\subsection{Beeinflussung des Personalverhaltens}
-\label{sec:org41c1f83}
-\begin{enumerate}
-\item Motivation \& Motivationsprozesse
-\label{sec:orgb88151d}
-\item Motivation durch Anreizsystme und Arbeitsgestaltung
-\label{sec:org62ff121}
-\end{enumerate}
+\label{sec:orgceca750}
+\subsubsection{Personalbedarf}
+\label{sec:orgf4533a2}
+Der \emph{Personalbedarf} einer Organisation umfasst - nach geforderten Qualifikationsstrukturen - gruppiert die Gesamtheit, die zur Wahrnehmung aller dispositiven \& exekutiven Aufgaben in allen Bereichen und auf allen Ebenen einer Organisation benötigt werden.
+
+Primärdeterminanten:
+\begin{itemize}
+\item periodenbezogenes Leistungsprogramm eines Betriebes
+\item Arbeitszeitbedarf pro Leistungseinheit (Arbeitskoeffizient) bzw pro zu bedienender Bestandseinheit (Besetzungskoeffizient)
+\item verfügbare Arbeitszeit der Arbeitskraft pro Periode
+\end{itemize}
+
+Sekundärdeterminanten:
+\begin{itemize}
+\item Angebots-/Nachfrageverhältnis, Technologie (zB Automatisierungsgrad), Grad der Arbeitsteilung
+\item Anforderungsprofile/Stellenbeschreibungen
+\end{itemize}
+
+Verfügbarkeit des Personals \(\rightarrow\) Dispositionsabhängigkeit der Bestimmung \& Deckung des Personalbedarfs
+\subsubsection{Personalrekrutierung und -auswahl}
+\label{sec:org93870d3}
+Anwerbung
+\begin{itemize}
+\item Zweck = Herstellung von Kontakten zu potentiellen Bewerbern, Personalmarketing (Arbeitgeberimage)
+\item Funktionen = Information, Motivation, Vorselektion
+\item Methoden = passiv, aktiv (zB Stellenanzerigen, elektr. Jobbörsen)
+\end{itemize}
+
+Auswahl
+\begin{itemize}
+\item Zweck = Identifikation der Eignung von Bewerbern für eine zu besetzende Stelle/Position, Screening-Strategie
+\item Phasen = Vorauswahl, Auswahl
+\item Methoden = Eignungstest, Assessment Center, Auswahlgespräch
+\end{itemize}
+
+Einstellung
+\begin{itemize}
+\item Zweck = Vereinbarungen zum Arbeitsverhältnis und zur Arbeitsleistung
+\item Inhalt = Kompetenzabgrenzung, Arbeitsbedingungen, berufliche Entwicklungsperspektiven
+\item impliziter Vertrag =  Vereinbarung von Rechten \& Pflichten auf der Basis stillschweigender Übereinkünfte
+\end{itemize}
+
+Eingliederung
+\begin{itemize}
+\item Zweck = Einführung des Mitarbeiters in das Arbeits-/Aufgabenfeld
+\item Inhalt = bereichsübergreifende, fachliche, soziale Eingliederung
+\end{itemize}
+
+Berufsbozgenes Integritätsprofil als Profil/Einschätzung der Eignung. Baumquerschnittdiagramm mit verschiedenen Charaktereigenschaften wie Gelassenheit, Vertrauen, Zuverlässigkeit, Verzicht auf Rechtfertigung etc.
+
+\textbf{Einstellungsinterviews}\\
+unstrukturiertes Interview:
+\begin{itemize}
+\item Annahmen über Menschenkenntnis
+\item Unterstützung von Stereotypen
+\item Annahmen über ideale Persönlichkeit
+\item hohe Wirkung von non-verbalem Verhalten
+\end{itemize}
+
+strukturiertes Interview:
+\begin{itemize}
+\item anforderungsbezogene Gestaltung
+\item Interviewverlauf und Fragenabfolge sind strukturiert
+\item Verwendung validierter/bewährter Merkmale
+\item Information \& Entscheidung sind getrennt (Beratungszeit)
+\item mehrere unabhängige \& kompetente Beurteiler sind beteiligt
+\end{itemize}
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=250px]{./pictures/persint.png}
+\caption{Multimodales Interview}
+\end{figure} 
+\subsubsection{Einsatz \& Disposition des Personals}
+\label{sec:orgc04aacb}
+Einsatz von Personal
+\begin{itemize}
+\item Zweck =  Übertragung von Aufgaben oder Stellen an die vorhandenen/verfügbaren Arbeitskräfte
+\item Methode = Zuordnung von Anforderungsprofilen und Fähigkeitsprofilen auf der Basis von Mindestwerten (Cut-Off Methode) oder (gewichteten) Ähnlichkeiten (Profilvergleichsmethode)
+\end{itemize}
+
+Segmentierung des Personals
+\begin{itemize}
+\item Differenzierung der Verfügbarkeit des Personals nach spezifischen Beschäftigungs-, Arbeits- und Entgeltbedingungen
+\item Stammbelegschaft = internes Arbeitsmarktsegment
+\item Randbelegschaft = externes Arbeitsmarktsegment (Manövriermasse für quantitative Anpassungen des Personalbestands)
+\end{itemize}
+
+Personalplanung als Disposition \(\rightarrow\) die Aufgabe der Personalplanung ist es, den Personalbedarf, den Personaleinsatz und die Personalaustattung - unter Beachtung der für den Personalsektor geltenden Restriktionen - optimal im Sinne der betrieblichen Ziele aufeinander abzustimmen
+\subsubsection{Personalentwicklung}
+\label{sec:orga62e0c5}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=250px]{./pictures/persgruent.png}
+\caption{Grundmodell der Personalentwicklung}
+\end{figure} 
+
+Beeinflussung des Personalverhaltens nicht klausurrelevant!
+
+\textbf{Ansprüche als Kriterium der Verhaltensbeeinflussung}:
+
+Beeinflussung des Personalverhaltens
+\begin{itemize}
+\item Zweck = Durchsetzung von Ansprüchen der Organisation an das Personalverhalten (Verhaltenserwartung)
+\item Inhalt = Aufforderung, sich in einer bestimmten Art \& Weise zu Verhalten (Anspruchskonformität des Verhaltens)
+\end{itemize}
+
+Inhaltsklassen organisationaler Ansprüche
+\begin{itemize}
+\item Funktional = Verhaltenserwartungen, die sich auf die Arbeitsaufgaben und die Arbeitsergebniise beziehen (\(\rightarrow\) Qualitätsansprüche, Gestaltungsansprüche)
+\item Extrafunktional = Verhaltenserwartungen, die sich insbes auf das Sozialverhalten beziehen (\(\rightarrow\) Höflichkeit, Ehrlichkeit, Pünktlichkeit)
+\item Situationsabhängigkeit von Verhaltenserwartungen
+\end{itemize}
+
+Maßnahmen zur Verhaltensbeeinflussung
+\begin{itemize}
+\item Verhaltenslenkung
+\item Verhaltensbeurteilung
+\item Verhaltensabgeltung
+\end{itemize}
+
+
+\textbf{Strukturelle Maßnahmen zur Beeinflussung des Personalverhaltens}
+\begin{itemize}
+\item strukturelle Maßnahmen = Arbeitsstruktur, Beurteilung, Anreize
+\item Entlohnung als Anreiz
+\end{itemize}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=250px]{./pictures/persentl.png}
+\caption{Bemessungsgrundlagen \& Formen der Entlohnung}
+\end{figure} 
+
+
+
+\textbf{Dispositive Maßnahmen zur Beeinflussung des Personalverhaltens}
+\begin{itemize}
+\item dispositive Maßnahmen = Beeinflussung durch situationsabhängies Führungsverhalten
+\item Führungskonzept, Situation und Führungserfolg
+\begin{itemize}
+\item Kontingenzmodell der Führung nach Fiedler
+\item Situative Führungstheorie nach Hersey/Blanchard
+\end{itemize}
+\end{itemize}
+
+III\(_{\text{Personalmanagement}}\)\(_{\text{3.pdf}}\) F.13 Zsmfassung
 \end{document}
