--- a/uni/BWL_3_Ressourcenmanagement/1_Ressourcenbereitstellung.tex
+++ b/uni/BWL_3_Ressourcenmanagement/1_Ressourcenbereitstellung.tex
@@ -1,4 +1,4 @@
-% Created 2018-07-05 Thu 21:13
+% Created 2018-07-11 Wed 15:37
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -31,22 +31,22 @@
 \tableofcontents
 
 \section{Ressourcen, Prozesse und Ziele betrieblicher Leistungserstellung}
-\label{sec:org44d7a72}
+\label{sec:org03466ae}
 \subsection{Leistungsbereich(Produktion)}
-\label{sec:org9813628}
+\label{sec:org6ad50d4}
 \begin{center}
 \includegraphics[width=250px]{./pictures/leistungsbereich_prod.png}
 \end{center} 
 
 \subsubsection{Produktion, Produktionsfaktoren, Produktionswirtschaft}
-\label{sec:orgcea88e6}
+\label{sec:orgf2760ba}
 \textbf{Produktion} = der industrielle Abbau von Material, dessen Be- und Verarbeitung und die Ausführung von Dienstleistungen; ist die methodische Umwandlung von Produktionsfaktoren in Produkte im Rahmen von bestimmten Produktionsverfahren
 
 \textbf{Produktionsfaktoren} = sind die in der Produktion eingesetzen materiellen und immateriellen Güter, durch deren Gebrauch \& Verbrauch neue Sachgüter \& Dienstleistungen (Services) entsehen; Produktionsmittel nach Gutenberg = Betriebsmittel, Werkstoffe, (objektbezogene/dispositive) Arbeitsleistungen
 
 \textbf{Produktionswirtschaft} = Aufgabe der Produktionswirtschaft ist die Planung, Durchführung \& Kontrolle der industriellen Leistungserstellung, um wirtschaftliche Produktionsstrukturen zu erreichen \& zu sichern
 \subsection{Finanzierungsbereich}
-\label{sec:org830e7b6}
+\label{sec:orgf999c27}
 
 \begin{center}
 \includegraphics[width=250px]{./pictures/finanzierungsbereich.png}
@@ -66,14 +66,14 @@ Investition ist sowas wie Verzicht in der Hoffnung auf Belohnung
 \end{itemize}
 
 \subsubsection{Finanzwirtschaft \& Zahlungsströme}
-\label{sec:org49ab5dc}
+\label{sec:org0c3a73a}
 \textbf{Monetärer Kapitalbegriff} = im Unternehmen eingesetzte Zahlungsmittel
 
 \textbf{Finanzierung} ist die Kapitalbeschaffung für die jeweilige Unternehmung. Die \textbf{Finanzwirtschaft} umfasst diese Kapitalbeschaffung und -verwendung in der Unternehmung. Zu den finanzwirtschaftlichen Zielen gehört die Erreichung eines \emph{finanzwirtschaftlichen Gleichgewichts}, das bedeutet die Sicherung der dispositiven Liquidität, sowie die Sicherung der strukturellen Liquidität.
 
 Die Funktion des \textbf{Finanzmanagements} ist die zielgerichtete Gestaltung der betrieblichen Finanzwirtschaft. Dazu zählt hauptsächlich die aktive Gestaltung der Kapitalzuführung \& des Kapitalentzugs.
 
-\paragraph{Monetäre Zielgrößen}\\
+\paragraph{Monetäre Zielgrößen}
 \begin{itemize}
 \item Zahlungsmittelbestand = Kassenbestand, Guthaben bei Kreditinstituren; Einzahlung, Auszahlung
 \item Geldvermögen = Zahlungsmittelbestand + Forderungen - Verbindlichkeiten; Einnahme, Ausgabe
@@ -82,11 +82,11 @@ Die Funktion des \textbf{Finanzmanagements} ist die zielgerichtete Gestaltung de
 \end{itemize}
 
 \section{Ressourcenbereitstellung \& Wettbewerbsfähigkeit}
-\label{sec:org633302c}
+\label{sec:org54e8953}
 \subsection{Gegenstandbereich \& Ziele betrieblicher Leistungserstellung}
-\label{sec:orga6f2cff}
+\label{sec:orgacd164a}
 \subsubsection{Betriebliche Leistungserstellung als Kombinationsprozess}
-\label{sec:orgde4cc05}
+\label{sec:orgda8517e}
 "\emph{Die Ergiebigkeit des Faktoreinsatzes in den  Betrieben ist einmal von der Beschaffenheit der Faktoren selbst und zum anderen von ihrer Kombination abhängig.
 Es gilt deshalb zu untersuchen, welche Umstände es sind, die den produktiven Beitrag bestimmen, den sie im Rahmen einer Faktorkombination zu leisten imstande sind.}" (Gutenberg 1975)
 
@@ -123,8 +123,10 @@ In der Transformation bzw dem Throughput ist eine Steigerung der Ausbringungsmen
 Im Output wird die Steigerung des Qualitätsniveaus + der Zuverlässigkeit, sowie die Verbesserung der Arbeitsbedingungen oder des Umweltschutzes als Ziel anvisiert.
 
 \subsubsection{Ziele \& Zielkonflikte produktionswirtschaftlicher Betätigung}
-\label{sec:org038c909}
-\paragraph{Inhaltliche Ziele & Zielkonflikte}\\
+\label{sec:orgbf63e66}
+\begin{enumerate}
+\item Inhaltliche Ziele \& Zielkonflikte
+\label{sec:org851d0d2}
 Man kann inhatlich zwischen dem Werziel Produktivität, dem Humanziel Flexibilität und dem Sachziel Qualität unterscheiden. Die Ziehlbeziehungen dieser Ziele sind indifferent, komplementär und/oder konkurrierend.
 
 \begin{figure}[htbp]
@@ -133,7 +135,8 @@ Man kann inhatlich zwischen dem Werziel Produktivität, dem Humanziel Flexibilit
 \caption{Inhaltliche Zielbeziehungen}
 \end{figure} 
 
-\paragraph{Unternehmensbeteiligte & Interessenkonflikte}\\
+\item Unternehmensbeteiligte \& Interessenkonflikte
+\label{sec:org0fe2736}
 Innerhalb des Unternehmens kann es zu diversen Konflikten \& Spannung zwischen den verschiedenen Beteiligten kommen.
 
 Ziele/Interessen der jeweiligen Unternehmensbeteiligten:
@@ -144,7 +147,8 @@ Ziele/Interessen der jeweiligen Unternehmensbeteiligten:
 \item Öffentlichkeit: Nachhaltigkeit, Transparenz
 \end{itemize}
 
-\paragraph{Sachliche Ziele produktionswirtschaftlicher Betätigung}\\
+\item Sachliche Ziele produktionswirtschaftlicher Betätigung
+\label{sec:org78d8e7e}
 
 \textbf{\textbf{Produktionsziele}}:
 Aus dem produktionswirtschaftlichen Sachziel der Herstellung von Gütern und/oder Dienstleistungen nach Mengen-, Zeit- und Qualitätskriterien leiten sich die
@@ -159,16 +163,17 @@ Das Produktionssystem wird durch strategische Maßnahmen in die Lage versetzt, s
 
 \textbf{\textbf{Produktionspolitik}}:
 Die auf die Produktionsebene "heruntergebrochenen" Ziele des Unternehmens finden in der Produktionspolitik ihre Gestaltungs- und Entscheidungsmodelle
+\end{enumerate}
 \subsection{Ressourcenbereitstellung als nachhaltiger Wettbewerbsvorteil}
-\label{sec:org7b1532a}
+\label{sec:org24625fb}
 \subsubsection{Produktionssysteme(-verfahren)}
-\label{sec:orgb005cb3}
+\label{sec:org5efcd7a}
 In einer gegebenen Situation wird aus allen möglichen Produkten \& Dienstleistungen ein \textbf{Produktionsprogramm} zusammengesetzt (Zielfunktion). Bei der betriebswirtschaftlichen Analyse des Produktionsprozesses sind alle Situationen \& Veränderungsmöglichkeiten zu betrachten, die auf die Zielfunktion und die Nebenbedingungen einwirken.
 
 Das \textbf{Produktionsverfahren} bezeichnet die organisatorische \& technologische Art, in welcher ein Betrieb Produktionsfaktoren kombinieren und wie er diesen Prozess durchführt.
 
 \subsubsection{Produktionsfunktion und Produktionsmodelle}
-\label{sec:org7f14b3d}
+\label{sec:orgd8fa659}
 \begin{center}
 \includegraphics[width=250px]{./pictures/prodfunktion.png}
 \end{center} 
@@ -186,7 +191,7 @@ Die Menge der Produktionsfaktoren, die zur Herstellung von \(x\) notwendig ist, 
 
 \begin{enumerate}
 \item Produktionstheoretische Grundbegriffe
-\label{sec:orge101054}
+\label{sec:orgc947267}
 \begin{itemize}
 \item \textbf{Grenzrate der Faktorsubstitution} = Austauschrelation zwischen zwei Produktionsfaktoren \(r_1\) und \(r_2\) bei Konstanz der Ausbringungsmenge x
 \item \textbf{Grenzproduktivität} = Veränderung der Ausbringungsmenge x in Abhängikeit von infinitisemal kleinen Änderungen der Faktoreinsatzmengen \(r_1\) bzw \(r_2\)
@@ -195,7 +200,7 @@ Die Menge der Produktionsfaktoren, die zur Herstellung von \(x\) notwendig ist, 
 \end{itemize}
 
 \item Kostenfunktion: Bewertung des Faktoreinsatzes
-\label{sec:org7e30bd4}
+\label{sec:orgb58b3d3}
 \$K = f(x)\$\\
 \begin{itemize}
 \item \textbf{Kosten/Gesamtkosten} = Die mit Preisen bewertete Faktoreinsatzmengen, die während einer Rechnungsperiode in Abhängikeit von dem Beschäftigungsgrad anfallen
@@ -209,7 +214,7 @@ Die Menge der Produktionsfaktoren, die zur Herstellung von \(x\) notwendig ist, 
 \end{itemize}
 
 \item Grundlegende Kritikpunkte
-\label{sec:org29e24ba}
+\label{sec:org8a559f5}
 \begin{itemize}
 \item mangelnde Untersuchung der Dynamik \& Unsicherheit des Produktionsgeschehens
 \item ungenügende Einbeziehung der betrieblichen Organisationsstruktur
@@ -221,7 +226,7 @@ Die Menge der Produktionsfaktoren, die zur Herstellung von \(x\) notwendig ist, 
 \end{enumerate}
 
 \subsubsection{Produktionskonzepte und - strategien}
-\label{sec:orgc1f9a2c}
+\label{sec:org2b34487}
 \begin{itemize}
 \item Qualitätsorientierung
 \item Best-practive Orientierung
