--- a/uni/Textanalyse/12/slapin_notes.org
+++ b/uni/Textanalyse/12/slapin_notes.org
@@ -1,3 +1,4 @@
+#+SETUPFILE: ~/.emacs.d/org-html-themes/setup/theme-readtheorg.setup
 #+LATEX_HEADER: \usepackage{textcomp}
 * A scaling Model for Estimating Time-Series Party Positions from Texts
 :PROPERTIES:
